--- a/app/views/products/_index.html.erb
+++ b/app/views/products/_index.html.erb
@@ -1,10 +1,13 @@
 <% @products.each do |product| %>
-  <tr>
+  <tr data-id='<%= product.id %>'>
     <td><%= product.name %></td>
     <td><%= number_to_currency product.price %></td>
     <td><%= link_to "Edit", edit_product_path(product), remote: true,
       class: "btn btn-default" %></td>
     <td><%= link_to "Delete", product_delete_path(product), remote: true,
       class: "btn btn-danger" %></td>
+    <td>
+      <%= link_to "Delete Jquery Ajax", "", class: "btn btn-danger btn_destroy_ajax" %>
+    </td>
   </tr>
 <% end %>
